--- a/resources/fxml/login.fxml
+++ b/resources/fxml/login.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="103.0" prefWidth="309.0" style="-fx-padding: 10px;"
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" style="-fx-padding: 10px;"
       xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <GridPane>
+        <GridPane alignment="CENTER">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -22,10 +22,6 @@
                 <PasswordField fx:id="fldPassword" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             </children>
         </GridPane>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0">
-            <buttons>
-                <Button alignment="CENTER" mnemonicParsing="false" text="Login"/>
-            </buttons>
-        </ButtonBar>
+        <Button fx:id="btnLogin" alignment="CENTER" mnemonicParsing="false" text="Login"/>
     </children>
 </VBox>
