--- a/resources/fxml/student.fxml
+++ b/resources/fxml/student.fxml
@@ -3,38 +3,53 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171">
+<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Print"/>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
+                        <MenuItem fx:id="printItem" mnemonicParsing="false" onAction="#printReport" text="Print"/>
+                        <MenuItem fx:id="saveItem" mnemonicParsing="false" onAction="#saveFile" text="Save"/>
+                        <Menu mnemonicParsing="false" text="Language">
+                            <items>
+                                <MenuItem fx:id="itemLangEN" mnemonicParsing="false" onAction="#changeLanguageEN"
+                                          text="English (US)"/>
+                                <MenuItem fx:id="itemLangBA" mnemonicParsing="false" onAction="#changeLanguageBA"
+                                          text="Bosanski"/>
+                            </items>
+                        </Menu>
+                        <MenuItem fx:id="closeItem" mnemonicParsing="false" onAction="#close" text="Close"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
+                        <MenuItem fx:id="aboutItem" mnemonicParsing="false" onAction="#openAbout" text="About"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="User">
+                    <items>
+                        <MenuItem fx:id="logoutItem" mnemonicParsing="false" onAction="#logout" text="Logout"/>
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
-        <VBox prefHeight="200.0" prefWidth="100.0">
+        <VBox style="-fx-padding: 10px;">
             <children>
-                <Label text="Welcome!">
+                <Label fx:id="lblWelcome" style="-fx-label-padding: 10px;" text="%welcome">
                     <font>
-                        <Font size="36.0"/>
+                        <Font size="24.0"/>
                     </font>
                 </Label>
-                <ChoiceBox prefWidth="150.0"/>
+                <Separator prefWidth="200.0"/>
+                <TableView fx:id="tableGrades" prefHeight="118.0" prefWidth="400.0">
+                    <columns>
+                        <TableColumn fx:id="colCourseName" maxWidth="-1.0" minWidth="250.0" prefWidth="270.0"
+                                     text="%course"/>
+                        <TableColumn fx:id="colGrade" maxWidth="-1.0" minWidth="150.0" prefWidth="150.0" text="%grade"/>
+                    </columns>
+                </TableView>
             </children>
         </VBox>
-        <TableView prefHeight="200.0" prefWidth="200.0">
-            <columns>
-                <TableColumn prefWidth="75.0" text="C1"/>
-                <TableColumn prefWidth="75.0" text="C2"/>
-            </columns>
-        </TableView>
     </children>
 </VBox>
