--- a/resources/fxml/admin.fxml
+++ b/resources/fxml/admin.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import java.net.URL?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="center" xmlns="http://javafx.com/javafx/8.0.171">
     <MenuBar fx:id="menu" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
@@ -57,36 +58,65 @@
             <RowConstraints/>
             <RowConstraints/>
             <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
         </rowConstraints>
         <children>
             <ListView fx:id="listUsers" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1"
-                      GridPane.rowIndex="2" GridPane.rowSpan="10"/>
-            <Label text="%name" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-            <TextField fx:id="fldName" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
-            <Label text="%surname" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-            <TextField fx:id="fldSurname" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
-            <Label text="%email" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
-            <TextField fx:id="fldEmail" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
-            <Label text="%username" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
-            <TextField fx:id="fldUsername" GridPane.columnIndex="3" GridPane.rowIndex="10"/>
-            <Label text="%password" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
-            <PasswordField fx:id="fldPassword" GridPane.columnIndex="3" GridPane.rowIndex="11"/>
+                      GridPane.rowIndex="3" GridPane.rowSpan="14"/>
+            <Label text="%name" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+            <TextField fx:id="fldName" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+            <Label text="%surname" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
+            <TextField fx:id="fldSurname" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
+            <Label text="%email" GridPane.columnIndex="2" GridPane.rowIndex="5"/>
+            <TextField fx:id="fldEmail" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
+            <Label text="%username" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
+            <TextField fx:id="fldUsername" GridPane.columnIndex="3" GridPane.rowIndex="11"/>
+            <Label text="%password" GridPane.columnIndex="2" GridPane.rowIndex="12"/>
+            <PasswordField fx:id="fldPassword" GridPane.columnIndex="3" GridPane.rowIndex="12"/>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3"
-                       GridPane.rowIndex="12">
+                       GridPane.rowIndex="17">
                 <buttons>
                     <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteUser" text="%deleteBttn"/>
                     <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addUser" text="%addBttn"/>
                 </buttons>
             </ButtonBar>
-            <Label text="%address" GridPane.columnIndex="2" GridPane.rowIndex="5"/>
-            <TextField fx:id="fldAddress" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
-            <TextField fx:id="fldTitle" GridPane.columnIndex="3" GridPane.rowIndex="7"/>
-            <Label text="%title" GridPane.columnIndex="2" GridPane.rowIndex="7"/>
-            <Label text="%jmbg" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
-            <TextField fx:id="fldJMBG" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
-            <TextField fx:id="fldIndex" GridPane.columnIndex="3" GridPane.rowIndex="8"/>
-            <Label text="%index" GridPane.columnIndex="2" GridPane.rowIndex="8"/>
-            <Separator prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="9"/>
+            <Label text="%address" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+            <TextField fx:id="fldAddress" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
+            <TextField fx:id="fldTitle" GridPane.columnIndex="3" GridPane.rowIndex="8"/>
+            <Label text="%title" GridPane.columnIndex="2" GridPane.rowIndex="8"/>
+            <Label text="%jmbg" GridPane.columnIndex="2" GridPane.rowIndex="7"/>
+            <TextField fx:id="fldJMBG" GridPane.columnIndex="3" GridPane.rowIndex="7"/>
+            <TextField fx:id="fldIndex" GridPane.columnIndex="3" GridPane.rowIndex="9"/>
+            <Label text="%index" GridPane.columnIndex="2" GridPane.rowIndex="9"/>
+            <Separator prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="10"/>
+            <Label text="%adduserlabel" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                <tooltip>
+                    <Tooltip text="%addtooltip"/>
+                </tooltip>
+                <font>
+                    <Font name="System Bold" size="12.0"/>
+                </font>
+            </Label>
+            <Label text="%userlabel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <font>
+                    <Font name="System Bold" size="12.0"/>
+                </font>
+            </Label>
+            <Separator prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="13"/>
+            <Label text="%deleteuserlabel" GridPane.columnIndex="2" GridPane.rowIndex="14">
+                <tooltip>
+                    <Tooltip text="%deletetooltip"/>
+                </tooltip>
+                <font>
+                    <Font name="System Bold" size="12.0"/>
+                </font>
+            </Label>
+            <Label text="%jmbg" GridPane.columnIndex="2" GridPane.rowIndex="15"/>
+            <TextField fx:id="fldDeleteJmbg" GridPane.columnIndex="3" GridPane.rowIndex="15"/>
         </children>
         <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
